--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,47 @@
         <nav class="relative flex-grow flex justify-end">
             <div class="menu-item">Home</div>
             <div class="menu-item">Lineup</div>
-            <div class="menu-item">Tickets</div>
+            <div class="menu-item group relative">
+                <span>Tickets</span>
+                <div class="hidden group-hover:block absolute right-0 top-full mt-2 whitespace-nowrap rounded-b-xl bg-pink-400/80 text-right shadow-lg z-10">
+                    <div class="px-4 py-2 hover:bg-pink-500/80">
+                        <span>Single day ticket</span>
+                    </div>
+                    <div class="px-4 py-2 hover:bg-pink-500/80">
+                        <span>7 day ticket</span>
+                    </div>
+                </div>
+            </div>
             <div class="menu-item">Support</div>
         </nav>
     </header>
+
+    <div class='bg-[url("./assets/images/hero.jpg")] bg-cover bg-center bg-fixed flex flex-col items-center justify-center h-[calc(100vh-200px)] min-h-[400px]'>
+      <div class="flex flex-col items-center bg-white/30 backdrop-blur-md rounded-xl px-4 py-2 text-center mb-6">
+        <div class="relative mb-2">
+          <img src="./assets/images/logo.png" width="175" alt="logo" />
+        </div>
+        <div class="text-3xl font-bold text-gray-900">
+          tw:<span class="text-gray-800">mf</span>
+        </div>
+      </div>
+      <div class="text-white text-lg font-medium mb-6 drop-shadow">
+        Keep me updated with news and promotions
+      </div>
+      <form class="flex flex-col sm:flex-row items-center gap-4">
+        <input
+          type="email"
+          placeholder="Email"
+          class="rounded-md border border-white/40 bg-white/30 backdrop-blur-md px-4 py-2 font-bold text-blue-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-pink-500 focus:ring-offset-2 focus:ring-offset-white caret-pink-500 transition"
+        />
+        <button
+          type="submit"
+          class="rounded-md bg-pink-600 hover:bg-blue-900 text-white font-bold px-6 py-2 cursor-pointer transition-all duration-200 shadow-none hover:shadow-2xl hover:shadow-black/20"
+        >
+          Subscribe
+        </button>
+      </form>
+    </div>
+
 </body>
 </html>
