3 - Grupos musicales TaildwindCSS

--- a/src/index.html
+++ b/src/index.html
@@ -59,5 +59,76 @@
       </form>
     </div>
 
+    <div class="py-16 px-4 flex flex-col items-center bg-white dark:bg-gray-900 transition-colors duration-300">
+        <h2 class="mb-4">Headliners</h2>
+            <p class="mb-8 max-w-2xl text-center text-gray-700 dark:text-gray-200">
+            Los mejores grupos del momento actuarán en nuestro festival. ¡Descubre el cartel y disfruta de la mejor música en directo!
+        </p>
+        <div class="relative w-full max-w-4xl">
+            <button class="absolute left-0 top-1/2 -translate-y-1/2 border-2 border-pink-500 text-pink-500 rounded-full p-1 bg-transparent hover:bg-pink-100 dark:hover:bg-blue-900 transition flex items-center justify-center mr-2"
+            >
+                <-
+            </button>
+            <!-- Carrusel de imágenes de grupos -->
+            <div class="flex overflow-x-auto gap-6 pb-4">
+                <div class="min-w-[250px] bg-gray-100 dark:bg-gray-800 rounded-xl shadow flex flex-col items-center p-0 overflow-hidden">
+                    <img src="./assets/images/band1.jpg" alt="Corduray Gary" class="w-full h-56 object-cover rounded-t-xl">
+                    <div class="w-full flex flex-col items-center p-4 bg-white/80 dark:bg-gray-900/80 rounded-b-xl">
+                        <h3 class="text-center font-bold text-lg">Corduray Gary</h3>
+                        <span class="text-sm text-gray-500 dark:text-gray-300 mt-1">1st July 9pm - Main Stage</span>
+                    </div>
+                </div>
+                <div class="min-w-[250px] bg-gray-100 dark:bg-gray-800 rounded-xl shadow flex flex-col items-center p-0 overflow-hidden">
+                    <img src="./assets/images/band2.jpg" alt="Corduray Gary" class="w-full h-56 object-cover rounded-t-xl">
+                    <div class="w-full flex flex-col items-center p-4 bg-white/80 dark:bg-gray-900/80 rounded-b-xl">
+                        <h3 class="text-center font-bold text-lg">Corduray Gary</h3>
+                        <span class="text-sm text-gray-500 dark:text-gray-300 mt-1">1st July 9pm - Main Stage</span>
+                    </div>
+                </div>
+                <div class="min-w-[250px] bg-gray-100 dark:bg-gray-800 rounded-xl shadow flex flex-col items-center p-0 overflow-hidden">
+                    <img src="./assets/images/band3.jpg" alt="Corduray Gary" class="w-full h-56 object-cover rounded-t-xl">
+                    <div class="w-full flex flex-col items-center p-4 bg-white/80 dark:bg-gray-900/80 rounded-b-xl">
+                        <h3 class="text-center font-bold text-lg">Corduray Gary</h3>
+                        <span class="text-sm text-gray-500 dark:text-gray-300 mt-1">1st July 9pm - Main Stage</span>
+                    </div>
+                </div>
+                <div class="min-w-[250px] bg-gray-100 dark:bg-gray-800 rounded-xl shadow flex flex-col items-center p-0 overflow-hidden">
+                    <img src="./assets/images/band4.jpg" alt="Corduray Gary" class="w-full h-56 object-cover rounded-t-xl">
+                    <div class="w-full flex flex-col items-center p-4 bg-white/80 dark:bg-gray-900/80 rounded-b-xl">
+                        <h3 class="text-center font-bold text-lg">Corduray Gary</h3>
+                        <span class="text-sm text-gray-500 dark:text-gray-300 mt-1">1st July 9pm - Main Stage</span>
+                    </div>
+                </div>
+                <div class="min-w-[250px] bg-gray-100 dark:bg-gray-800 rounded-xl shadow flex flex-col items-center p-0 overflow-hidden">
+                    <img src="./assets/images/band5.jpg" alt="Corduray Gary" class="w-full h-56 object-cover rounded-t-xl">
+                    <div class="w-full flex flex-col items-center p-4 bg-white/80 dark:bg-gray-900/80 rounded-b-xl">
+                        <h3 class="text-center font-bold text-lg">Corduray Gary</h3>
+                        <span class="text-sm text-gray-500 dark:text-gray-300 mt-1">1st July 9pm - Main Stage</span>
+                    </div>
+                </div>
+                <div class="min-w-[250px] bg-gray-100 dark:bg-gray-800 rounded-xl shadow flex flex-col items-center p-0 overflow-hidden">
+                    <img src="./assets/images/band6.jpg" alt="Corduray Gary" class="w-full h-56 object-cover rounded-t-xl">
+                    <div class="w-full flex flex-col items-center p-4 bg-white/80 dark:bg-gray-900/80 rounded-b-xl">
+                        <h3 class="text-center font-bold text-lg">Corduray Gary</h3>
+                        <span class="text-sm text-gray-500 dark:text-gray-300 mt-1">1st July 9pm - Main Stage</span>
+                    </div>
+                </div>
+                <div class="min-w-[250px] bg-gray-100 dark:bg-gray-800 rounded-xl shadow flex flex-col items-center p-0 overflow-hidden">
+                    <img src="./assets/images/band7.jpg" alt="Corduray Gary" class="w-full h-56 object-cover rounded-t-xl">
+                    <div class="w-full flex flex-col items-center p-4 bg-white/80 dark:bg-gray-900/80 rounded-b-xl">
+                        <h3 class="text-center font-bold text-lg">Corduray Gary</h3>
+                        <span class="text-sm text-gray-500 dark:text-gray-300 mt-1">1st July 9pm - Main Stage</span>
+                    </div>
+                </div>
+          <!-- Añade más divs para más grupos -->
+            </div>
+            <button class="absolute right-0 top-1/2 -translate-y-1/2 border-2 border-pink-500 text-pink-500 rounded-full p-1 bg-transparent hover:bg-pink-100 dark:hover:bg-blue-900 transition flex items-center justify-center"
+            >
+                ->
+            </button>
+        </div>
+
+<script src="./carrusel.js"></script>
+
 </body>
 </html>
