--- a/src/index.html
+++ b/src/index.html
@@ -7,30 +7,36 @@
     <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body>
-    <header class="text-white sticky top-0 bg-gradient-to-r from-pink-500 to-purple-500 flex items-center p-2">
+    <header class="text-white sticky top-0 bg-gradient-to-r from-pink-500 to-purple-500 flex items-center p-2 z-50">
         <div class="flex items-center space-x-2">
-            <img src="./assets/images/logo.png" alt="Logo" class="h-8 w-8">
+            <img src="./assets/images/logo.png" alt="Logo" class="h-8 w-8" />
             <span class="text-2xl font-bold">
-            tw:<span class="text-gray-800">mf</span>
+                tw:<span class="text-gray-800">mf</span>
             </span>
         </div>
-        <nav class="relative flex-grow flex justify-end">
+
+        <!-- Botón hamburguesa (solo visible en móvil) -->
+        <button id="hamburger" class="ml-auto md:hidden focus:outline-none">
+            <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
+            </svg>
+        </button>
+
+        <!-- Menú principal -->
+        <nav id="nav-menu" class="hidden flex-col md:flex md:flex-row md:items-center md:ml-auto space-y-4 md:space-y-0 md:space-x-6 absolute md:static top-full left-0 w-full md:w-auto bg-pink-500 md:bg-transparent p-4 md:p-0">
             <div class="menu-item">Home</div>
             <div class="menu-item">Lineup</div>
             <div class="menu-item group relative">
-                <span>Tickets</span>
-                <div class="hidden group-hover:block absolute right-0 top-full mt-2 whitespace-nowrap rounded-b-xl bg-pink-400/80 text-right shadow-lg z-10">
-                    <div class="px-4 py-2 hover:bg-pink-500/80">
-                        <span>Single day ticket</span>
-                    </div>
-                    <div class="px-4 py-2 hover:bg-pink-500/80">
-                        <span>7 day ticket</span>
-                    </div>
+                <span class="cursor-pointer md:pointer-events-none" onclick="toggleSubmenu()">Tickets</span>
+                <div id="submenu" class="hidden group-hover:block md:absolute right-0 top-full mt-2 bg-pink-400/80 rounded-b-xl shadow-lg z-10 whitespace-nowrap">
+                    <div class="px-4 py-2 hover:bg-pink-500/80 cursor-pointer">Single day ticket</div>
+                    <div class="px-4 py-2 hover:bg-pink-500/80 cursor-pointer">7 day ticket</div>
                 </div>
             </div>
             <div class="menu-item">Support</div>
         </nav>
     </header>
+
 
     <div class='bg-[url("./assets/images/hero.jpg")] bg-cover bg-center bg-fixed flex flex-col items-center justify-center h-[calc(100vh-200px)] min-h-[400px]'>
       <div class="flex flex-col items-center bg-white/30 backdrop-blur-md rounded-xl px-4 py-2 text-center mb-6">
@@ -128,7 +134,7 @@
             </button>
         </div>
 
-<script src="./carrusel.js"></script>
+<script src="./main.js"></script>
 
 </body>
 </html>
