--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,15 @@
         <nav id="nav-menu" class="hidden flex-col md:flex md:flex-row md:items-center md:ml-auto space-y-4 md:space-y-0 md:space-x-6 absolute md:static top-full left-0 w-full md:w-auto bg-pink-500 md:bg-transparent p-4 md:p-0">
             <div class="menu-item">Home</div>
             <div class="menu-item">Lineup</div>
-            <div class="menu-item group relative">
-                <span class="cursor-pointer md:pointer-events-none" onclick="toggleSubmenu()">Tickets</span>
-                <div id="submenu" class="hidden group-hover:block md:absolute right-0 top-full mt-2 bg-pink-400/80 rounded-b-xl shadow-lg z-10 whitespace-nowrap">
-                    <div class="px-4 py-2 hover:bg-pink-500/80 cursor-pointer">Single day ticket</div>
-                    <div class="px-4 py-2 hover:bg-pink-500/80 cursor-pointer">7 day ticket</div>
+            <div class="menu-item group relative px-6 py-4">
+                <span class="cursor-pointer md:pointer-events-none block w-full text-center" onclick="toggleSubmenu()">Tickets</span>
+                <div
+                id="submenu"
+                class="hidden group-hover:block md:absolute md:right-0 md:top-full md:mt-0 bg-pink-400/80 rounded-b-xl shadow-lg z-50 whitespace-nowrap min-w-[220px] 
+                w-full left-0 static border-t border-pink-300 md:border-0"
+                >
+                    <div class="px-8 py-5 hover:bg-pink-500/80 cursor-pointer text-lg w-full text-center">Single day ticket</div>
+                    <div class="px-8 py-5 hover:bg-pink-500/80 cursor-pointer text-lg w-full text-center">7 day ticket</div>
                 </div>
             </div>
             <div class="menu-item">Support</div>
@@ -133,6 +137,18 @@
                 ->
             </button>
         </div>
+
+    <footer class="w-full mt-16 bg-gradient-to-r from-pink-500 to-purple-500 dark:bg-gradient-to-r dark:from-pink-500 dark:to-purple-500 text-white dark:text-gray-200 py-8 px-4">
+    <div class="max-w-4xl mx-auto flex flex-col md:flex-row items-center justify-between gap-4">
+        <div class="flex items-center gap-2">
+            <img src="./assets/images/logo.png" alt="Logo" class="h-8 w-8" />
+            <span class="font-bold text-xl">tw:<span class="text-gray-800 dark:text-gray-200">mf</span></span>
+        </div>
+        <div class="text-center md:text-right text-sm">
+            © 2025 Angel Cabrera Martos. Todos los derechos reservados.
+        </div>
+    </div>
+</footer>
 
 <script src="./main.js"></script>
 
